--- a/index.html
+++ b/index.html
@@ -2,12 +2,32 @@
     <script src="p5.min.js"></script>
     <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
-    <script src="matter.js"></script>
-    <script src="box.js"></script>
-    <script src="Ground.js"></script>
+    <script src = "writers/game.js"></script>
+    <script src = "writers/login.js"></script>
+    <script src = "writers/user.js"></script>
+   
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
 
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyC2Oo6aGEgfv_K4yRrpOSxBI23VGNJlYdQ",
+    authDomain: "my-app-5ec18.firebaseapp.com",
+    databaseURL: "https://my-app-5ec18.firebaseio.com",
+    projectId: "my-app-5ec18",
+    storageBucket: "my-app-5ec18.appspot.com",
+    messagingSenderId: "52611948568",
+    appId: "1:52611948568:web:e733454b66db24f3f1e36d"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   </head>
   <body>
     <script src="sketch.js"></script>
