--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src = "writers/login.js"></script>
     <script src = "writers/user.js"></script>
     <script src = "writers/NewUserForm.js"></script>
+    <script src = "writers/homePage.js"></script>
    
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
